invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_76.src
.IPPcode24
STRI2INT LF@d int@49 string@henlo LF@a